revamp site header

--- a/client/partials/header.html
+++ b/client/partials/header.html
@@ -1,9 +1,11 @@
 <template name="header">
-  <div class="container">
-    <div class="header clearfix">
-      <a href="/">
-        <img src="/logo.png" alt="No Office Needed"/>
-      </a>
+  <header>
+    <div class="container">
+      <div class="header clearfix">
+        <a href="/">
+          <img src="/logo.png" alt="No Office Needed"/>
+        </a>
+      </div>
     </div>
-  </div>
+  </header>
 </template>
