--- a/jboard.less
+++ b/jboard.less
@@ -27,8 +27,13 @@
 
 body {
   font-family: @font-family;
-  padding-top: 20px;
   background: #f2f3f6;
+}
+
+header {
+  padding-top: (@spacing / 2);
+  background: #fff;
+  border: solid 1px #333;
 }
 
 textarea {
@@ -54,6 +59,10 @@ li {
 
 label {
   padding: 0 10px 0;
+}
+
+.header {
+  margin-bottom: (@spacing / 2) !important;
 }
 
 .row.marketing {
