add footer backlink to Snatchapro

--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -27,5 +27,6 @@
       </div>
 
       <p>NoOfficeNeeded &copy; 2015</p>
+      <small>Sponsored by: <a href="http://www.snatchapro.com" target="_blank">Snatchapro</a></small>
     </footer>
 </template>
