--- a/jboard.less
+++ b/jboard.less
@@ -148,13 +148,6 @@ label {
   }
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 20px 15px 0;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
 /* Supporting marketing content */
 .marketing {
   padding-right: 15px;
@@ -183,9 +176,18 @@ label {
   font-weight: normal;
   margin: 3em auto 0;
   text-align: center;
-  padding-bottom: 1em;
+  padding: 2em 0 1em;
   background: #333;
   color: #fff;
+
+  p {
+    margin: 0 0 .2em;
+  }
+
+  small a {
+    color: #10C8CD;
+    text-decoration: underline;
+  }
 
   .footer-logo {
     text-align: center;
