--- a/jboard.less
+++ b/jboard.less
@@ -308,6 +308,10 @@ h2.title{
  }
 }
 
+.buttonPanel{
+  .margins(20px, 20px, -15px, 0);
+}
+
 /* Customize container */
 @media (min-width: 768px) {
   .container {
