override bootstrap styling for lists in ql-editor

--- a/jboard.less
+++ b/jboard.less
@@ -229,6 +229,14 @@ label {
   }
 }
 
+.ql-editor {
+  ol li {
+    list-style-type: decimal;
+  }
+  ul li {
+    list-style-type: disc;
+  }
+}
 
 /* Job Group styling for landing page */
 
