--- a/jboard.less
+++ b/jboard.less
@@ -240,9 +240,8 @@ label {
 
 /* Job Group styling for landing page */
 
-.jobGroup{
-
-  a{
+.jobGroup {
+  a {
       border-bottom: 1px solid #e7e7e7;
   		color: #888;
   		display: block;
@@ -266,7 +265,7 @@ label {
       float: left;
     }
 
-    h5{
+    h5 {
       .margins(0, 0, 0, 0);
       .fontWeight(bold);
     }
@@ -284,6 +283,9 @@ label {
         width: 18rem;
       }
 
+    }
+    .view-all-link {
+      margin-bottom: 2em;
     }
 
 }
