change link colors and other remedial tasks

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -2,7 +2,7 @@
   <!-- use class active for sponsored listings in future -->
   <div class="container">
     <div class="col-lg-12">
-      <h2><a href="/front_end_jobs">Front End Jobs</a></h2>
+      <h2><a href="/front_end_jobs" class="default-link-color">Front End Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'front_end_jobs'}}
@@ -12,7 +12,7 @@
         <a href="/front_end_jobs" class="view-all-link">View All Front End Jobs >></a>
       </div> <!-- // end front end jobs -->
 
-      <h2><a href="/back_end_jobs">Back End Jobs</a></h2>
+      <h2><a href="/back_end_jobs" class="default-link-color">Back End Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'back_end_jobs'}}
@@ -22,7 +22,7 @@
         <a href="/back_end_jobs" class="view-all-link">View All Back End Jobs >></a>
       </div> <!-- // end back end jobs -->
 
-      <h2><a href="/fullstack_jobs">Fullstack Jobs</a></h2>
+      <h2><a href="/fullstack_jobs" class="default-link-color">Fullstack Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'fullstack_jobs'}}
@@ -32,7 +32,7 @@
         <a href="/fullstack_jobs" class="view-all-link">View All Fullstack Jobs >></a>
       </div> <!-- // end fullstack jobs -->
 
-      <h2><a href="/miscellaneous_jobs">Miscellaneous Jobs</a></h2>
+      <h2><a href="/miscellaneous_jobs" class="default-link-color">Miscellaneous Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'miscellaneous_jobs'}}
@@ -42,7 +42,7 @@
         <a href="/miscellaneous_jobs" class="view-all-link">View All Miscellaneous Jobs >></a>
       </div> <!-- // end miscellaneous jobs -->
 
-      <h2><a href="/design_jobs">Design Jobs</a></h2>
+      <h2><a href="/design_jobs" class="default-link-color">Design Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'design_jobs'}}
@@ -52,7 +52,7 @@
         <a href="/design_jobs" class="view-all-link">View All Design Jobs >></a>
       </div> <!-- // end design jobs -->
 
-      <h2><a href="/sales_marketing_jobs">Sales/Marketing Jobs</a></h2>
+      <h2><a href="/sales_marketing_jobs" class="default-link-color">Sales/Marketing Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'sales_marketing_jobs'}}
@@ -62,7 +62,7 @@
         <a href="/sales_marketing_jobs" class="view-all-link">View All Sales/Marketing Jobs >></a>
       </div> <!-- // end sales/marketing jobs -->
 
-      <h2><a href="/help_desk_support_jobs">Help Desk/Support Jobs</a></h2>
+      <h2><a href="/help_desk_support_jobs" class="default-link-color">Help Desk/Support Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'help_desk_support_jobs'}}
@@ -72,7 +72,7 @@
         <a href="/help_desk_support_jobs" class="view-all-link">View All Help Desk/Support Jobs >></a>
       </div>  <!-- // end help desk & support jobs -->
 
-      <h2><a href="/system_admin_jobs">System Admin Jobs</a></h2>
+      <h2><a href="/system_admin_jobs" class="default-link-color">System Admin Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
           {{#if isCategory 'system_admin_jobs'}}
