--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -4,19 +4,22 @@
         <div>
           <h3>Quick links</h3>
           <ul>
-            <li><a href="/front_end_jobs">Front End Jobs</a></li>
-            <li><a href="/back_end_jobs">Back End Jobs</a></li>
-            <li><a href="/fullstack_jobs">Full Stack Jobs</a></li>
-            <li><a href="/miscellaneous_jobs">Miscellaneous Jobs</a></li>
-            <li><a href="/design_jobs">Design Jobs</a></li>
-            <li><a href="/sales_marketing_jobs">Sales and Marketing Jobs</a></li>
-            <li><a href="/help_desk_support_jobs">Help Desk and Technical Support Jobs</a></li>
+            <li><a href="/front_end_jobs">Front End Jobs</a></li> -
+            <li><a href="/back_end_jobs">Back End Jobs</a></li> -
+            <li><a href="/fullstack_jobs">Full Stack Jobs</a></li> -
+            <li><a href="/miscellaneous_jobs">Miscellaneous Jobs</a></li> -
+            <li><a href="/design_jobs">Design Jobs</a></li> -
+            <li><a href="/sales_marketing_jobs">Sales and Marketing Jobs</a></li> -
+            <li><a href="/help_desk_support_jobs">Help Desk and Technical Support Jobs</a></li> -
             <li><a href="/system_admin_jobs">System Admin and DevOps Jobs</a></li>
           </ul>
         </div>
       </div>
       <div class="footer-logo">
         <ul>
+          <li>
+            <input type="input" /><button>button</button>
+          </li>
           <li>
             <a href="#" target="_blank"><img src="/square-facebook.png" alt="facebook"></a>
           </li>
