UI elements for things to come

--- a/client/partials/footer.html
+++ b/client/partials/footer.html
@@ -18,7 +18,10 @@
       <div class="footer-logo">
         <ul>
           <li>
-            <input type="input" /><button>button</button>
+            <div class="form-inline">
+              <input type="input" class="form-control" placeholder="Enter Email" />
+              <button class="btn btn-primary">Get Alerts!</button>
+            </div>
           </li>
           <li>
             <a href="#" target="_blank"><img src="/square-facebook.png" alt="facebook"></a>
