--- a/jboard.less
+++ b/jboard.less
@@ -197,6 +197,10 @@ label {
     text-decoration: underline;
   }
 
+  .form-inline {
+    margin-right: 1em;
+  }
+
   .footer-logo {
     text-align: center;
   }
