Updated create posting link on 404 page. Converted underscores to dashes in URLs due to Google's documented SEO suggestions.

--- a/client/partials/condensed-jobs.html
+++ b/client/partials/condensed-jobs.html
@@ -2,84 +2,84 @@
   <!-- use class active for sponsored listings in future -->
   <div class="container">
     <div class="col-lg-12">
-      <h2><a href="/front_end_jobs" class="default-link-color">Front End Jobs</a></h2>
+      <h2><a href="/front-end-jobs" class="default-link-color">Front End Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'front_end_jobs'}}
+          {{#if isCategory 'front-end-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/front_end_jobs" class="view-all-link">View All Front End Jobs >></a>
+        <a href="/front-end-jobs" class="view-all-link">View All Front End Jobs >></a>
       </div> <!-- // end front end jobs -->
 
-      <h2><a href="/back_end_jobs" class="default-link-color">Back End Jobs</a></h2>
+      <h2><a href="/back-end-jobs" class="default-link-color">Back End Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'back_end_jobs'}}
+          {{#if isCategory 'back-end-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/back_end_jobs" class="view-all-link">View All Back End Jobs >></a>
+        <a href="/back-end-jobs" class="view-all-link">View All Back End Jobs >></a>
       </div> <!-- // end back end jobs -->
 
-      <h2><a href="/fullstack_jobs" class="default-link-color">Fullstack Jobs</a></h2>
+      <h2><a href="/fullstack-jobs" class="default-link-color">Fullstack Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'fullstack_jobs'}}
+          {{#if isCategory 'fullstack-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/fullstack_jobs" class="view-all-link">View All Fullstack Jobs >></a>
+        <a href="/fullstack-jobs" class="view-all-link">View All Fullstack Jobs >></a>
       </div> <!-- // end fullstack jobs -->
 
-      <h2><a href="/miscellaneous_jobs" class="default-link-color">Miscellaneous Jobs</a></h2>
+      <h2><a href="/miscellaneous-jobs" class="default-link-color">Miscellaneous Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'miscellaneous_jobs'}}
+          {{#if isCategory 'miscellaneous-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/miscellaneous_jobs" class="view-all-link">View All Miscellaneous Jobs >></a>
+        <a href="/miscellaneous-jobs" class="view-all-link">View All Miscellaneous Jobs >></a>
       </div> <!-- // end miscellaneous jobs -->
 
-      <h2><a href="/design_jobs" class="default-link-color">Design Jobs</a></h2>
+      <h2><a href="/design-jobs" class="default-link-color">Design Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'design_jobs'}}
+          {{#if isCategory 'design-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/design_jobs" class="view-all-link">View All Design Jobs >></a>
+        <a href="/design-jobs" class="view-all-link">View All Design Jobs >></a>
       </div> <!-- // end design jobs -->
 
-      <h2><a href="/sales_marketing_jobs" class="default-link-color">Sales/Marketing Jobs</a></h2>
+      <h2><a href="/sales-marketing-jobs" class="default-link-color">Sales/Marketing Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'sales_marketing_jobs'}}
+          {{#if isCategory 'sales-marketing-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/sales_marketing_jobs" class="view-all-link">View All Sales/Marketing Jobs >></a>
+        <a href="/sales-marketing-jobs" class="view-all-link">View All Sales/Marketing Jobs >></a>
       </div> <!-- // end sales/marketing jobs -->
 
-      <h2><a href="/help_desk_support_jobs" class="default-link-color">Help Desk/Support Jobs</a></h2>
+      <h2><a href="/help-desk-support-jobs" class="default-link-color">Help Desk/Support Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'help_desk_support_jobs'}}
+          {{#if isCategory 'help-desk-support-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/help_desk_support_jobs" class="view-all-link">View All Help Desk/Support Jobs >></a>
+        <a href="/help-desk-support-jobs" class="view-all-link">View All Help Desk/Support Jobs >></a>
       </div>  <!-- // end help desk & support jobs -->
 
-      <h2><a href="/system_admin_jobs" class="default-link-color">System Admin Jobs</a></h2>
+      <h2><a href="/system-admin-jobs" class="default-link-color">System Admin Jobs</a></h2>
       <div class="jobGroup">
         {{#each getCategories}}
-          {{#if isCategory 'system_admin_jobs'}}
+          {{#if isCategory 'system-admin-jobs'}}
             {{> singleListing}}
           {{/if}}
         {{/each}}
-        <a href="/system_admin_jobs" class="view-all-link">View All System Admin Jobs >></a>
+        <a href="/system-admin-jobs" class="view-all-link">View All System Admin Jobs >></a>
       </div> <!-- // end system admin jobs -->
 
     </div>
